<resources>
    <string name="app_name">Tech Tatva 18</string>
    <string name="IOS">iOS</string>
    <string name="drawer_about_us">About us</string>
    <string name="drawer_developers">Developers</string>
    <string name="bottom_nav_events">Events</string>
    <string name="Android">Android</string>
    <string name="head">Core Committee</string>
    <string name="developer">Developer</string>
    <string name="title_home">Home</string>
    <string name="title_schedule">Schedule</string>
    <string name="title_categories">Categories</string>
    <string name="title_mitpost">TT18 on The MIT Post</string>

    <string name="title_workshops">Workshops</string>
    <string name="title_results">Results</string>
    <string name="team_position">0</string>
    <string name="no_events">No events</string>
    <string name="event_registration">Event Registration</string>
    <string name="register_team">Register Team</string>
    <string name="team_id2">Team ID:</string>
    <string name="max_team_size">Max Team Size:</string>
    <string name="add_team_member">Add Team Member</string>
    <string name="scan_qr_code_2">Scan Delegate QR</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="reset">Reset</string>
    <string name="toggle_flash">Toggle Flash</string>
    <string name="day_1">Day 1</string>
    <string name="day_2">Day 2</string>
    <string name="day_3">Day 3</string>
    <string name="day_4">Day 4</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="team_id">Team ID :</string>
    <string name="about_us">About Us</string>
    <string name="round">Round:</string>
    <string name="no_connection">No Connection</string>
    <string name="no_connection_text">Please connect to the internet and retry</string>
    <string name="retry">Retry</string>
    <string name="event_logo">Event Logo</string>
    <string name="event_name">Event Name</string>
    <string name="favourite_icon">Favourite Icon</string>
    <string name="workshop_logo">workshop Logo</string>
    <string name="workshop_name">Workshop Name</string>
    <string name="date">Date:</string>
    <string name="time">Time:</string>
    <string name="venue">Venue:</string>
    <string name="contact">Contact:</string>
    <string name="workshop_description">Workshop Description</string>
    <string name="cnt_wksp_1">Rishabh</string>
    <string name="cnt_wksp_2">Srishti</string>
    <string name="cntno_wksp_1">+919008146634</string>
    <string name="cntno_wksp_2">+919560702479</string>
    <string name="no_data">No data available</string>
    <string name="revels_logo">Revels Logo</string>
    <string name="favourites">Favourites</string>
    <string name="drawer_favourites">Favourites</string>
    <string name="action_delete_all">Delete All</string>
    <string name="dialog_no">No</string>
    <string name="dialog_yes">Yes</string>
    <string name="pre_tech_tatva">Pre Tech Tatva</string>
    <string name="clear">Clear</string>
    <string name="no_favourites">No favourites</string>
    <string name="action_search">Search</string>
    <string name="profile">Profile</string>
    <string name="refresh">Refresh</string>
    <string name="pre_revels">Pre-Revels</string>
    <string name="no_events2">No Events Available</string>
    <string name="no_results_2">The Results are not out yet.</string>
    <string name="no_results">OOPS!!!</string>
    <string name="fest_name">Tech Tatva \'18</string>
    <string name="event_fragment">Events</string>
    <string name="more">MORE</string>
    <string name="no_categories">No categories available</string>
    <string name="home_insta_title">TT18 on Instagram</string>
    <string name="unable_to_load_insta">Unable to load Instagram feed. Swipe down to retry!</string>
    <string name="about_us_text">It is said that history is the best teacher.This TechTatva we recall our glorious past, by learning what history taught us - adapting to changing circumstances, creating solutions for yesterday\'s problems, and innovating for the future generations.With projects and events culminating to give our fest a fitting theme: Reminiscing Greatness, along with our logo that boasts of our progress, we transcend into the future- a future that has been reinforced by the work done by great people with the help of technological advancement.With this in mind, we can see that the logo portrays a human and a robotic aspect working together, imagining and building the future.Come together this TechTatva, and bask in the glory of our forefathers as we remember the steps they have carved for us that helped us climb to greater heights.</string>
    <string name="email2">Email</string>

    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="login_as_guest">Continue as guest</string>
    <string name="sign_up">Sign up</string>
    <string name="outstation">I\'m not a MAHE student</string>
    <string name="delegate_id">Delegate ID:</string>
    <string name="registration_number">Registration Number:</string>
    <string name="phone">Phone:</string>
    <string name="email">Email:</string>
    <string name="college">College:</string>
    <string name="logout">Logout</string>
    <string name="event_reg">Event Registration</string>
    <string name="event_registrations">Event Registrations</string>
    <string name="delegate_qr">Delegate QR</string>

</resources>
