<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_schedule"
        android:icon="@drawable/ic_schedule"
        android:title="@string/title_schedule" />

    <item
        android:id="@+id/navigation_categories"
        android:icon="@drawable/ic_categories"
        android:title="@string/title_categories" />

    <item
        android:id="@+id/navigation_workshops"
        android:icon="@drawable/ic_workshops"
        android:title="@string/title_workshops" />

    <item
        android:id="@+id/navigation_results"
        android:icon="@drawable/ic_results"
        android:title="@string/title_results" />

</menu>
