<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activities.LoginActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:animateLayoutChanges="true"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingBottom="@dimen/activity_vertical_margin">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="@drawable/tt18" />

                <LinearLayout
                    android:id="@+id/login_child_linear_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clipChildren="false"
                    android:clipToPadding="false"
                    android:orientation="vertical"
                    android:visibility="visible">


                    <android.support.v7.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        app:cardBackgroundColor="@color/white"
                        app:cardCornerRadius="@dimen/padding_half">

                        <EditText
                            android:id="@+id/username_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:hint="@string/email2"
                            android:inputType="textEmailAddress"
                            android:padding="12dp"
                            android:textColor="@color/black"
                            android:textColorHint="#808080"
                            android:textSize="@dimen/typography_title" />

                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginRight="16dp"
                        app:cardBackgroundColor="@color/white"
                        app:cardCornerRadius="@dimen/padding_half">

                        <EditText
                            android:id="@+id/password_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:padding="12dp"
                            android:textColor="@color/black"
                            android:textColorHint="#808080"
                            android:textSize="@dimen/typography_title" />

                    </android.support.v7.widget.CardView>


                    <Button
                        android:id="@+id/login_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="48dp"
                        android:layout_marginRight="16dp"
                        android:background="@color/colorPrimary"
                        android:onClick="loginClicked"
                        android:text="@string/login"
                        android:textColor="@color/white"
                        android:textSize="@dimen/typography_title" />

                    <Button
                        android:id="@+id/guest_login_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginRight="16dp"
                        android:background="@color/colorPrimaryDark"
                        android:text="@string/login_as_guest"
                        android:onClick="guestContinue"
                        android:textColor="@color/white"
                        android:textSize="@dimen/typography_title" />

                    <Button
                        android:id="@+id/sign_up_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginRight="16dp"
                        android:background="@color/colorAccent"
                        android:onClick="gotoSignup"
                        android:text="@string/sign_up"
                        android:textColor="@color/white"
                        android:textSize="@dimen/typography_title" />

                </LinearLayout>

            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>

        <ProgressBar
            android:id="@+id/loading_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone" />

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>