<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="@dimen/padding_half"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="0dp"
    android:layout_marginLeft="@dimen/padding_half"
    android:layout_marginRight="@dimen/padding_half"
    android:layout_marginTop="@dimen/padding_half">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="@dimen/padding_half"
            android:paddingTop="@dimen/padding_default">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/Android"
                android:textSize="15sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/padding_default"
                android:layout_marginRight="@dimen/padding_default"
                android:layout_marginTop="@dimen/padding_default"
                android:background="@android:drawable/divider_horizontal_bright" />
        </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="195dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="@dimen/padding_half">

        <ImageView
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="12dp"
            android:src="@drawable/dev_icon_rahulsathanapalli" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Rahul Sathanapalli"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/head"
            android:fontFamily="sans-serif-light"
            android:textColor="@color/colorAccent"
            android:textSize="14sp" />

    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="@dimen/padding_half">

            <ImageView
                android:id="@+id/imageViewAndroid"
                android:layout_width="54dp"
                android:layout_height="54dp"
                android:layout_marginBottom="12dp"
                android:src="@drawable/dev_icon_saptarshi" />


            <TextView
                android:id="@+id/textViewAndroid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Saptarshi"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textViewPositionAndroid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/head"
                android:fontFamily="sans-serif-light"
                android:textColor="@color/colorAccent"
                android:textSize="14sp" />

        </LinearLayout>
</LinearLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/_26dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/padding_quarter">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/padding_half"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="54dp"
                    android:layout_height="54dp"
                    android:layout_marginBottom="@dimen/padding_half"
                    android:src="@drawable/dev_icon_riya" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="Riya"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/developer"
                    android:textColor="@color/colorAccent"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/padding_half"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="54dp"
                    android:layout_height="54dp"
                    android:layout_marginBottom="@dimen/padding_half"
                    android:src="@drawable/dev_icon_ankush" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="Ankush"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/developer"
                    android:textColor="@color/colorAccent"
                    android:textSize="14sp" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>